Add the welsh versions of the pages and link the en ones

--- a/getting-a-new-energy-certificate.html
+++ b/getting-a-new-energy-certificate.html
@@ -95,7 +95,7 @@
       </p>
 
       <div class="govuk-inset-text">
-        This service is also available in <a class="govuk-link" href="?lang=cy">Welsh (Cymraeg)</a>.
+        This service is also available in <a class="govuk-link" href="sicrhau-tystysgrif-ynni-newydd.html">Welsh (Cymraeg)</a>.
       </div>
 
       <a
