--- a/find-an-energy-certificate.html
+++ b/find-an-energy-certificate.html
@@ -81,7 +81,7 @@
 
       <p class="govuk-body">
         <div class="govuk-inset-text">
-          This service is also available in <a class="govuk-link" href="?lang=cy">Welsh (Cymraeg)</a>.
+          This service is also available in <a class="govuk-link" href="chwiliwch-am-dystysgrif-ynni.html">Welsh (Cymraeg)</a>.
         </div>
       </p>
 
@@ -114,7 +114,6 @@
 
       <p class="govuk-body">
         If you need additional support to find an energy certificate or report, contact us on <a class="govuk-link" href="mailto:mhclg.digital-services@communities.gov.uk?subject=EPB - ">mhclg.digital-services@communities.gov.uk</a>, or call our helpdesk on 020 3829 0748 (Monday to Friday, 9am - 5pm).
-
       </p>
 
       <p class="govuk-body">
