ensure internal links to getting/finding certs are internal

--- a/find-an-energy-certificate.html
+++ b/find-an-energy-certificate.html
@@ -109,7 +109,7 @@
       </h2>
 
       <p class="govuk-body">
-        If your property does not have an energy certificate or the certificate is expired, you can <a href="https://getting-new-energy-certificate-integration.digital.communities.gov.uk"> get a new energy certificate.</a>
+        If your property does not have an energy certificate or the certificate is expired, you can <a href="getting-a-new-energy-certificate.html"> get a new energy certificate.</a>
       </p>
 
       <p class="govuk-body">
