--- a/getting-a-new-energy-certificate.html
+++ b/getting-a-new-energy-certificate.html
@@ -122,7 +122,7 @@
       </h2>
 
       <p class="govuk-body">
-        You can <a href= https://find-energy-certificate-integration.digital.communities.gov.uk> check if the property already has a valid energy certificate</a>.
+        You can <a href="find-an-energy-certificate.html"> check if the property already has a valid energy certificate</a>.
       </p>
 
       <p class="govuk-body">
