Add govuk link styles to all links

--- a/chwiliwch-am-dystysgrif-ynni.html
+++ b/chwiliwch-am-dystysgrif-ynni.html
@@ -107,7 +107,7 @@
                     </h2>
 
                     <p class="govuk-body">
-                        Os nad oes gan eich eiddo dystysgrif ynni neu os yw’r dystysgrif wedi dod i ben, fe allwch chi <a href="sicrhau-tystysgrif-ynni-newydd.html"> sicrhau tystysgrif ynni newydd</a>
+                        Os nad oes gan eich eiddo dystysgrif ynni neu os yw’r dystysgrif wedi dod i ben, fe allwch chi <a class="govuk-link" href="sicrhau-tystysgrif-ynni-newydd.html"> sicrhau tystysgrif ynni newydd</a>
                     </p>
 
                     <p class="govuk-body">
@@ -115,7 +115,7 @@
                     </p>
 
                     <p class="govuk-body">
-                        Ar gyfer eiddo yn yr Alban, defnyddiwch <a href="https://www.scottishepcregister.org.uk/">Wasanaeth tystysgrifau ynni yr Alban</a>.
+                        Ar gyfer eiddo yn yr Alban, defnyddiwch <a class="govuk-link" href="https://www.scottishepcregister.org.uk/">Wasanaeth tystysgrifau ynni yr Alban</a>.
                     </p>
                 </div>
                 <div class="govuk-grid-column-one-third govuk-!-padding-right-0">
