--- a/find-an-energy-certificate.html
+++ b/find-an-energy-certificate.html
@@ -109,7 +109,7 @@
       </h2>
 
       <p class="govuk-body">
-        If your property does not have an energy certificate or the certificate is expired, you can <a href="getting-a-new-energy-certificate.html"> get a new energy certificate.</a>
+        If your property does not have an energy certificate or the certificate is expired, you can <a class="govuk-link" href="getting-a-new-energy-certificate.html"> get a new energy certificate.</a>
       </p>
 
       <p class="govuk-body">
@@ -117,7 +117,7 @@
       </p>
 
       <p class="govuk-body">
-        For properties in Scotland, use the <a href="https://www.scottishepcregister.org.uk/">Scottish energy certificate service</a>.
+        For properties in Scotland, use the <a class="govuk-link" href="https://www.scottishepcregister.org.uk/">Scottish energy certificate service</a>.
       </p>
     </div>
       <div class="govuk-grid-column-one-third govuk-!-padding-right-0">
