--- a/getting-a-new-energy-certificate.html
+++ b/getting-a-new-energy-certificate.html
@@ -122,7 +122,7 @@
       </h2>
 
       <p class="govuk-body">
-        You can <a href="find-an-energy-certificate.html"> check if the property already has a valid energy certificate</a>.
+        You can <a class="govuk-link" href="find-an-energy-certificate.html"> check if the property already has a valid energy certificate</a>.
       </p>
 
       <p class="govuk-body">
@@ -130,7 +130,7 @@
       </p>
 
       <p class="govuk-body">
-        For properties in Scotland, use the <a href="https://www.scottishepcregister.org.uk/">Scottish energy certificate service</a>.
+        For properties in Scotland, use the <a class="govuk-link" href="https://www.scottishepcregister.org.uk/">Scottish energy certificate service</a>.
       </p>
     </div>
     <div class="govuk-grid-column-one-third govuk-!-padding-right-0">
