--- a/sicrhau-tystysgrif-ynni-newydd.html
+++ b/sicrhau-tystysgrif-ynni-newydd.html
@@ -111,7 +111,7 @@
                     </h2>
 
                     <p class="govuk-body">
-                        Fe allwch chi <a href="chwiliwch-am-dystysgrif-ynni.html"> wirio a oes gan yr eiddo dystysgrif ynni ddilys yn barod</a>.
+                        Fe allwch chi <a class="govuk-link" href="chwiliwch-am-dystysgrif-ynni.html"> wirio a oes gan yr eiddo dystysgrif ynni ddilys yn barod</a>.
                     </p>
 
                     <p class="govuk-body">
@@ -119,7 +119,7 @@
                     </p>
 
                     <p class="govuk-body">
-                        Ar gyfer eiddo yn yr Alban, defnyddiwch <a href="https://www.scottishepcregister.org.uk/">Wasanaeth tystysgrifau ynni yr Alban</a>.
+                        Ar gyfer eiddo yn yr Alban, defnyddiwch <a class="govuk-link" href="https://www.scottishepcregister.org.uk/">Wasanaeth tystysgrifau ynni yr Alban</a>.
                     </p>
                 </div>
                 <div class="govuk-grid-column-one-third govuk-!-padding-right-0">
